--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "zoovu-challenge",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^10.0.27",
@@ -13,9 +14,13 @@
     "@types/node": "^12.12.61",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
     "customize-cra": "^1.0.0",
+    "emotion-theming": "^10.0.27",
+    "history": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "typescript": "^3.7.5"
   },
@@ -41,6 +46,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "2.1.2",
     "react-app-rewired": "^2.1.6"
   }
 }
