--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
+    "@loadable/component": "^5.13.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/loadable__component": "^5.13.0",
     "@types/node": "^12.12.61",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
@@ -18,6 +20,7 @@
     "customize-cra": "^1.0.0",
     "emotion-theming": "^10.0.27",
     "history": "^5.0.0",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
