--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "@types/loadable__component": "^5.13.0",
     "@types/node": "^12.12.61",
     "@types/react": "^16.9.46",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "customize-cra": "^1.0.0",
     "emotion-theming": "^10.0.27",
     "history": "^5.0.0",
     "lodash": "^4.17.20",
+    "mobx": "^5.15.6",
+    "mobx-react": "^6.3.0",
+    "mobx-react-lite": "^2.2.2",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
