--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
     "@loadable/component": "^5.13.2",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
+    "@testing-library/react": "^11.0.4",
+    "@types/enzyme": "^3.10.6",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^24.9.0",
     "@types/loadable__component": "^5.13.0",
     "@types/node": "^12.12.61",
     "@types/react": "^16.9.46",
@@ -30,13 +30,27 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-test-renderer": "^16.13.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "test": "react-app-rewired test --coverage",
     "eject": "react-app-rewired eject"
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.test.ts",
+      "src/**/*.test.tsx",
+      "!src/index.ts"
+    ],
+    "coverageReporters": [
+      "text"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -55,8 +69,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
+    "@testing-library/react-hooks": "^3.4.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
+    "enzyme-to-json": "^3.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^24.9.0",
     "prettier": "2.1.2",
     "react-app-rewired": "^2.1.6"
   }
